# notisfly

./: README.md  biome.json  notisfly.code-workspace  package.json  pnpm-lock.yaml
.turbo/cache/: 23ac84e1c5aba1fb-meta.json  273a96a45562ed91-meta.json  2c9c334ba116c0b5-meta.json  2c9c334ba116c0b5.tar.zst  30aeb3f5070825ab-meta.json  3cc17cd571eceefa-meta.json  6f8a3edcdd433d79-meta.json  7f777e895a2ee616-meta.json  86527a12ab47ea0e-meta.json  9861dab5f45c3b3a-meta.json  b31e5a59ffc6e4a2-meta.json  c294a123d5460b07-meta.json  eaa25fc4fd6f8b0e-meta.json
.turbo/daemon/: 551290cb7857c4d7-turbo.log.2024-10-06  551290cb7857c4d7-turbo.log.2024-10-07  551290cb7857c4d7-turbo.log.2024-10-08  551290cb7857c4d7-turbo.log.2024-10-09
backend/: .env  Cargo.toml
backend/migrations/: 20241004152544_init.down.sql  20241004152544_init.up.sql  20241007103759_diary.down.sql  20241007103759_diary.up.sql  20241008114201_content-save-format.down.sql  20241008114201_content-save-format.up.sql
backend/src/: cli.rs  db.rs  error.rs  main.rs  profile.rs
backend/src/api/: auth.rs  mod.rs  types.rs
backend/src/api/mongo/: mod.rs  types.rs
backend/src/api/notes/: mod.rs  types.rs
backend/src/api/oss/: mod.rs
backend/src/api/shortnotes/: diary.rs  meta.rs  mod.rs  note.rs  ws.rs
backend/src/api/user/: mod.rs  user.rs
backend/src/store/: mod.rs
backend/src/store/mongo/: mod.rs  types.rs
backend/src/store/notes/: mod.rs  types.rs
backend/src/store/oss/: mod.rs
backend/src/store/shortnotes/: diary.rs  meta.rs  mod.rs  note.rs
backend/src/store/user/: mod.rs
(+41 files in other folders)
